Step4-Orchestrating-Services-with-Kubernetes/app/blog/infra/k8s/posts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: heysirius/posts:0.0.1
