Step4-Orchestrating-Services-with-Kubernetes/app/blog/infra/k8s/comments-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      # 在 cluster 中的 port
      port: 4001
      # Pod 的 port
      targetPort: 4001
