Step4-Orchestrating-Services-with-Kubernetes/app/blog/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  # 生成 pod 的数量
  replicas: 1
  # 选择器 找到 label 为 app: moderation 这样键值对的 
  selector:
    matchLabels: 
      app: moderation
  # pod 的具体配置
  template:
    metadata:
      labels: 
        app: moderation
    spec:
      containers:
        - name: moderation
          image: heysirius/moderation:latest
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv
spec:
  # 默认为 type: ClusterIP 所以可以不用写
  # type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      # 在 cluster 中的 port
      port: 4003
      # Pod 的 port
      targetPort: 4003
