Step4-Orchestrating-Services-with-Kubernetes/app/blog/infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      # 在 cluster 中的 port
      port: 4000
      # Pod 的 port
      targetPort: 4000
