Step4-Orchestrating-Services-with-Kubernetes/app/blog/infra/k8s/query-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      # 在 cluster 中的 port
      port: 4002
      # Pod 的 port
      targetPort: 4002
